# rfc-rag

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: mkdocs.yml
docs/docs/: index.md  setup.md  usage.md
rfc-rag/: Makefile  requirements.txt
rfc-rag/rfc_rag/: evaluation.py
rfc_rag/: __init__.py  dataset.py  features.py  plots.py
rfc_rag/modeling/: predict.py  train.py
tests/: standalone_test.py  test_data.py  test_search.py
